APIInfra.yaml


AWSTemplateFormatVersion: '2010-09-09'

Description: AWS core resources to create an ECS cluster spanning public and private subnets. Supports
  
  public facing load balancers.

Mappings:

  SubnetConfig:

    VPC:

      CIDR: '10.0.0.0/16'

    PublicOne:

      CIDR: '10.0.0.0/24'

    PublicTwo:

      CIDR: '10.0.1.0/24'

    PrivateOne:

      CIDR: '10.0.2.0/24'

    PrivateTwo:

      CIDR: '10.0.3.0/24'

Resources:

  VPC:

    Type: AWS::EC2::VPC

    Properties:

      EnableDnsSupport: true

      EnableDnsHostnames: true

      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']


PublicSubnetOne:

  Type: AWS::EC2::Subnet

  Properties:

    AvailabilityZone: !Select

      - 0

      - Fn::GetAZs: !Ref 'AWS::Region'

    VpcId: !Ref 'VPC'

    CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']

    MapPublicIpOnLaunch: true

  PublicSubnetTwo:

    Type: AWS::EC2::Subnet

    Properties:

      AvailabilityZone: !Select

        - 1

        - Fn::GetAZs: !Ref 'AWS::Region'

      VpcId: !Ref 'VPC'

      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']

      MapPublicIpOnLaunch: true


PrivateSubnetOne:

  Type: AWS::EC2::Subnet

  Properties:

    AvailabilityZone: !Select

      - 0

      - Fn::GetAZs: !Ref 'AWS::Region'

    VpcId: !Ref 'VPC'

    CidrBlock: !FindInMap ['SubnetConfig', 'PrivateOne', 'CIDR']

  PrivateSubnetTwo:

    Type: AWS::EC2::Subnet

    Properties:

      AvailabilityZone: !Select

        - 1

        - Fn::GetAZs: !Ref 'AWS::Region'

      VpcId: !Ref 'VPC'

      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateTwo', 'CIDR']


InternetGateway:

  Type: AWS::EC2::InternetGateway

  GatewayAttachement:

    Type: AWS::EC2::VPCGatewayAttachment

    Properties:

      VpcId: !Ref 'VPC'

      InternetGatewayId: !Ref 'InternetGateway'

  PublicRouteTable:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref 'VPC'

  PublicRoute:

    Type: AWS::EC2::Route

    DependsOn: GatewayAttachement

    Properties:

      RouteTableId: !Ref 'PublicRouteTable'

      DestinationCidrBlock: '0.0.0.0/0'

      GatewayId: !Ref 'InternetGateway'

  PublicSubnetOneRouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId: !Ref PublicSubnetOne

      RouteTableId: !Ref PublicRouteTable

  PublicSubnetTwoRouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId: !Ref PublicSubnetTwo

      RouteTableId: !Ref PublicRouteTable


NatGatewayOneAttachment:

  Type: AWS::EC2::EIP

  DependsOn: GatewayAttachement

  Properties:

    Domain: vpc

  NatGatewayTwoAttachment:

    Type: AWS::EC2::EIP

    DependsOn: GatewayAttachement

    Properties:

      Domain: vpc

  NatGatewayOne:

    Type: AWS::EC2::NatGateway

    Properties:

      AllocationId: !GetAtt NatGatewayOneAttachment.AllocationId

      SubnetId: !Ref PublicSubnetOne

  NatGatewayTwo:

    Type: AWS::EC2::NatGateway

    Properties:

      AllocationId: !GetAtt NatGatewayTwoAttachment.AllocationId

      SubnetId: !Ref PublicSubnetTwo

  PrivateRouteTableOne:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref 'VPC'

  PrivateRouteOne:

    Type: AWS::EC2::Route

    Properties:

      RouteTableId: !Ref PrivateRouteTableOne

      DestinationCidrBlock: 0.0.0.0/0

      NatGatewayId: !Ref NatGatewayOne

  PrivateRouteTableOneAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PrivateRouteTableOne

      SubnetId: !Ref PrivateSubnetOne

  PrivateRouteTableTwo:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref 'VPC'

  PrivateRouteTwo:

    Type: AWS::EC2::Route

    Properties:

      RouteTableId: !Ref PrivateRouteTableTwo

      DestinationCidrBlock: 0.0.0.0/0

      NatGatewayId: !Ref NatGatewayTwo

  PrivateRouteTableTwoAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PrivateRouteTableTwo

      SubnetId: !Ref PrivateSubnetTwo


  ####

  # ALB related resources

  ####

  PublicLoadBalancerSG:

    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription: Access to the public facing load balancer

      VpcId: !Ref 'VPC'

      SecurityGroupIngress:

        - CidrIp: 0.0.0.0/0

          IpProtocol: -1

  PublicLoadBalancer:

    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

    Properties:

      Scheme: internet-facing

      LoadBalancerAttributes:

        - Key: idle_timeout.timeout_seconds

          Value: '30'

      Subnets:

        - !Ref 'PublicSubnetOne'

        - !Ref 'PublicSubnetTwo'

      SecurityGroups: [!Ref 'PublicLoadBalancerSG']

  # A dummy target group is used to setup the ALB to just drop traffic

  # initially, before any real service target groups have been added.

  DummyTargetGroupPublic:

    Type: AWS::ElasticLoadBalancingV2::TargetGroup

    Properties:

      HealthCheckIntervalSeconds: 6

      HealthCheckPath: /

      HealthCheckProtocol: HTTP

      HealthCheckTimeoutSeconds: 5

      HealthyThresholdCount: 2

      Port: 80

      Protocol: HTTP

      UnhealthyThresholdCount: 2

      VpcId: !Ref 'VPC'

  PublicLoadBalancerListener:

    Type: AWS::ElasticLoadBalancingV2::Listener

    DependsOn:

      - PublicLoadBalancer

    Properties:

      DefaultActions:

        - TargetGroupArn: !Ref 'DummyTargetGroupPublic'

          Type: 'forward'

      LoadBalancerArn: !Ref 'PublicLoadBalancer'

      Port: 80

      Protocol: HTTP

  ####

  # ECS related resources

  ####

  ECSCluster:

    Type: AWS::ECS::Cluster

    Properties:

      ClusterName: 'enhanced-architecture-fargate'

  ContainerSecurityGroup:

    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription: Access to the containers

      VpcId: !Ref 'VPC'

      SecurityGroupIngress:

        - IpProtocol: tcp

          FromPort: 0

          ToPort: 65535

          SourceSecurityGroupId: !Ref 'PublicLoadBalancerSG'


######################################

Outputs:

  VpcId:

    Description: The ID of the VPC that this stack is deployed in

    Value: !Ref 'VPC'

  PublicSubnetOne:

    Description: Public subnet one

    Value: !Ref 'PublicSubnetOne'

  PublicSubnetTwo:

    Description: Public subnet two

    Value: !Ref 'PublicSubnetTwo'

  PrivateSubnetOne:

    Description: Private subnet one

    Value: !Ref 'PrivateSubnetOne'

  PrivateSubnetTwo:

    Description: Private subnet two

    Value: !Ref 'PrivateSubnetTwo'

  ExternalUrl:

    Description: The url of the external load balancer

    Value: !Sub http://${PublicLoadBalancer.DNSName}
